Fix tooltip effect icons alignment with very long effect description

--- a/src/styles/skill-tooltip.scss
+++ b/src/styles/skill-tooltip.scss
@@ -50,6 +50,7 @@
         .tooltip-effect-description {
             transform: translateX(4px) translateY(-10px);
             display: inline-block;
+            flex-basis: 100%;
         }
 
         .positive {
